Atualiza rei-do-show.html

--- a/rei-do-show.html
+++ b/rei-do-show.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hércules | WiChryspédia</title>
+    <title>Rei do Show | WiChryspédia</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -32,19 +32,20 @@
         </aside>
 
         <main class="main">
-            <h1 id="topo">Hércules</h1>
+            <h1 id="topo">Rei do Show</h1>
 
-            <p>"Hércules" é um filme de animação musical de fantasia norte-americano, o trigésimo-quinto da Walt Disney
-                Feature Animation. Lançado em 27 de junho de 1997, o filme é inspirado no mito grego de Herácles, mais
-                conhecido como Hércules, filho de Zeus. Apesar de ter recebido críticas medianas a positivas,
-                especialmente para a atuação de James Woods como Hades, o filme teve um desempenho modesto em sua
-                estreia, lucrando US$ 252,7 milhões nas bilheterias mundiais. "Hércules" foi seguido por uma prequela em
-                vídeo, "Hercules: Zero to Hero", que serviu como piloto para a série de TV "Hercules: The Animated
-                Series".
+            <p>"O Rei do Show" é um filme norte-americano de drama musical e biográfico de 2017, dirigido por Michael
+                Gracey e escrito por Jenny Bicks e Bill Condon. Baseado na história de P. T. Barnum e a criação do circo
+                Barnum & Bailey Circus, o filme é estrelado por Hugh Jackman, Zac Efron, Michelle Williams, Rebecca
+                Ferguson e Zendaya. Lançado em dezembro de 2017, o filme arrecadou mais de 434 milhões de dólares em
+                bilheterias mundiais, tornando-se o terceiro filme musical mais lucrativo de todos os tempos. Apesar de
+                receber críticas mistas, o filme foi elogiado por suas performances, música e produção, e recebeu várias
+                indicações ao Globo de Ouro, incluindo Melhor Filme - Comédia ou Musical e Melhor Canção Original para
+                "This Is Me".
             </p>
 
             <h2 id="trailer">Trailer</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/nL67qqiFAtc?si=OrHB2aNjOjUUCxzT"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/r5R6CVp_JzU?si=yr98dLPaIQnb61aI"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -56,138 +57,64 @@
 
             <h2 id="elenco">Elenco</h2>
             <ul>
-                <li><b>Tate Donovan</b> como Hércules</li>
-                <li><b>Danny DeVito</b> como Filoctetes</li>
-                <li><b>James Woods</b> como Hades</li>
-                <li><b>Susan Egan</b> como Mégara</li>
-                <li><b>Bobcat Goldthwait</b> como Agonia</li>
-                <li><b>Matt Frewer</b> como Pânico</li>
-                <li><b>Rip Torn</b> como Zeus</li>
-                <li><b>Samantha Eggar</b> como Hera</li>
-                <li><b>Barbara Barrie</b> como Alcmena</li>
-                <li><b>Hal Holbrook</b> como Anfitrião</li>
-                <li><b>Paul Shaffer</b> como Hermes</li>
-                <li><b>Charlton Heston</b> como Narrador</li>
-                <li><b>Vanéese Y. Thomas</b> como Clio</li>
-                <li><b>Lillias White</b> como Calíope</li>
+                <li><b>Hugh Jackman</b> como P. T. Barnum</li>
+                <li><b>Ellis Rubin</b> como P. T. Barnum (jovem)</li>
+                <li><b>Ziv Zaifman</b> como P. T. Barnum (voz)</li>
+                <li><b>Zac Efron</b> como Phillip Carlyle</li>
+                <li><b>Michelle Williams</b> como Charity Barnum</li>
+                <li><b>Skylar Dunn</b> como Charity (jovem)</li>
+                <li><b>Rebecca Ferguson</b> como Jenny Lind</li>
+                <li><b>Loren Allred</b> como Jenny Lind (voz)</li>
+                <li><b>Zendaya</b> como Anne Wheeler</li>
+                <li><b>Keala Settle</b> como Lettie Lutz</li>
+                <li><b>Yahya Abdul-Mateen II</b> como W. D. Wheeler</li>
+                <li><b>Austyn Johnson</b> como Caroline Barnum</li>
+                <li><b>Cameron Seely</b> como Helen Barnum</li>
+                <li><b>Sam Humphrey</b> como Charles Stratton</li>
+                <li><b>Shannon Holtzapffel</b> como Constantine</li>
+                <li><b>Shawn Marshall</b> como Joice Heth</li>
+                <li><b>Paul Sparks</b> como James Gordon Bennett</li>
+                <li><b>Gayle Rankin</b> como Rainha Vitória</li>
+                <li><b>Natasha Liu Bordizzo</b> como Deng Yan</li>
             </ul>
+
+
 
             <a href="#topo" id="link-topo">Topo da Página</a>
             <h2 id="poster">Pôster</h2>
             <figure>
-                <img src="assets/images/hercules.jpg" width="250"
-                    alt="Pôster do filme em inglês. Um grande raio amarelo, Hercules escrito com letras gregas e abaixo escrito 1997 em números romanos e 'strikes this summer'.">
+                <img src="assets/images/greatest_showman.jpg" width="250"
+                    alt="Pôster do filme em inglês. O ator Hugh Jackman de costas e sua imagem espelhada abaixo juntos aos outros personagens do seu circo fazendo uma apresentação.">
                 <figcaption>Pôster do Filme </figcaption>
             </figure>
             <br>
 
             <a href="#topo" id="link-topo">Topo da Página</a>
-            <h2 id="producao">Produção</h2>
 
-            <h3 id="trilha">Trilha Sonora</h3>
-            <p>Hércules Em Português: Uma Trilha Sonora Original de Walt Disney Records foi lançada no Brasil em 1997
-                pela Velas e Walt Disney Records. Contém duas versões da canção "Go the Distance" interpretada por
-                Ricky Martin, sendo uma em espanhol e outra em português.
-
-                A versão brasileira de "I Won't Say (I'm in Love)" (Não Direi) presente na trilha sonora foi
-                interpretada por Kika Tristão. A cantora foi premiada como a melhor cantora dubladora da América Latina
-                pela Disney, sendo a primeira vez que o Brasil recebe o prêmio.
-
-                Todas as letras escritas por David Zippel, versão em português por Marcelo Coutinho e Renato Rosenberg,
-                todas as músicas compostas por Alan Menken.
+            <h2 id="trilha">Trilha Sonora</h2>
+            <p>Benj Pasek e Justin Paul escreveram nove canções. Foi o primeiro álbum da dupla a atingir a primeira posição na Billboard 200. O álbum de trilha sonora possui onze faixas realizadas pelo elenco.
             </p>
-            <h4>Canções</h4>
+            <h3>Canções</h3>
 
             <ol>
-                <li><b>"Faz Tempo"</b> - Ênio Santos</li>
-                <li><b>"O Que Passou I"</b> - Rosa Marya Colin, Kacau Gomes, Marya Bravo, Sabrina Korgut e Kiara Sasso</li>
-
-                <li><b>"Vencer Distâncias"</b> - Marcus Menna</li>
-                <li><b>"Minha Chance"</b> - Mauro Ramos</li>
-                <li><b>"De Zero a Herói"</b> - Rosa Marya Colin, Kacau Gomes, Marya Bravo, Sabrina Korgut e Kiara Sasso</li>
-                <li><b>"Não Direi"</b> - Kika Tristão, Rosa Marya Colin, Kacau Gomes, Marya Bravo, Sabrina Korgut e Kiara Sasso
-                </li>
-                <li><b>"Brilhou no Céu"</b> - Rosa Marya Colin, Kacau Gomes, Marya Bravo, Sabrina Korgut e Kiara
-                    Sasso</li>
-                <li><b>"Já Não Há Distância"</b> - Ricky Martin</li>
-                <li><b>"Brilhou no Céu"</b> - Rosa Marya Colin, Kacau Gomes, Marya Bravo, Sabrina Korgut e Kiara Sasso</li>
-                <li><b>"No Importa La Distancia"</b> - Ricky Martin</li>
-            </ol>
+                <li><b>"The Greatest Show"</b> – Hugh Jackman, Zac Efron, Zendaya</li>
+                <li><b>"A Million Dreams"</b> – Ziv Zaifman, Jackman, Michelle Williams</li>
+                <li><b>"A Million Dreams (Reprise)"</b> – Austyn Johnson, Cameron Seely</li>
+                <li><b>"Come Alive"</b> – Hugh Jackman, Keala Settle, Daniel Everidge, Zendaya</li>
+                <li><b>"The Other Side"</b> – Hugh Jackman & Zac Efron</li>
+                <li><b>"Never Enough"</b> – Loren Allred</li>
+                <li><b>"This Is Me"</b> – Keala Settle</li>
+                <li><b>"Rewrite the Stars"</b> – Zac Efron & Zendaya</li>
+                <li><b>"Tightrope"</b> – Michelle Williams</li>
+                <li><b>"Never Enough (Reprise)"</b> – Loren Allred</li>
+                <li><b>"From Now On"</b> – Hugh Jackman</li>
+              </ol>
+              
 
             <br>
 
             <a href="#topo" id="link-topo">Topo da Página</a>
-            <h3 id="premios">Prêmios e Indicações</h3>
-            <p>O produtor Ross Bell inicialmente considerou Russell Crowe para o papel de Tyler Durden em "Fight Club",
-                mas o produtor sênior Art Linson optou por Brad Pitt, que assinou com o estúdio por um cachê de US$ 17,5
-                milhões. Para o papel do narrador sem nome, o diretor David Fincher escolheu Edward Norton, apesar do
-                interesse inicial do estúdio em atores como Matt Damon e Sean Penn. Norton, que recebeu uma oferta de
-                US$ 2,5 milhões da Fox, teve que negociar suas obrigações contratuais com a Paramount Pictures antes de
-                aceitar o papel. Em janeiro de 1998, Pitt e Norton foram oficialmente escalados, passando por
-                treinamento intensivo e preparação para seus papéis. A escolha de Fincher para o papel de Marla Singer
-                foi Helena Bonham Carter, apesar das considerações iniciais de Janeane Garofalo, Courtney Love e Winona
-                Ryder.</p>
-            <br>
-
-            <a href="#topo" id="link-topo">Topo da Página</a>
-            <h3 id="filmagens">Filmagens</h3>
-            <p>A produção de "Fight Club" começou com um orçamento de US$ 23 milhões, que logo aumentou para US$ 50
-                milhões e, eventualmente, para US$ 67 milhões durante as filmagens. Apesar das tentativas do produtor
-                executivo Arnon Milchan de reduzir os custos, o diretor David Fincher se recusou, resultando em um
-                orçamento final de produção entre US$ 63 e 65 milhões. As cenas de luta foram coreografadas para
-                capturar a realidade, com a maquiadora Julie Pearce estudando artes marciais mistas para retratar os
-                lutadores com precisão. As filmagens, que duraram 138 dias e envolveram mais de 1.500 rolos de filme,
-                ocorreram em Los Angeles e em cenários construídos no estúdio da Fox. A produção incluiu trezentas
-                cenas, duzentas locações e efeitos especiais complexos, levando Fincher a comparar "Fight Club" com seu
-                filme subsequente, "Panic Room", devido à logística envolvida.</p>
-            <br>
-
-            <a href="#topo" id="link-topo">Topo da Página</a>
-            <h3 id="trilha">Trilha Sonora</h3>
-            <p>David Fincher estava preocupado que bandas com experiência em escrever trilhas sonoras fossem incapazes
-                de unir os temas, então ele procurou uma banda que nunca havia gravado para cinema. Ele contatou o grupo
-                Radiohead mas o cantor, Thom Yorke, recusou enquanto se recuperava do estresse de promover seu álbum de
-                1997, OK Computer. Com isso, Fincher contratou a dupla produtora de breakbeat Dust Brothers, que criou
-                uma trilha sonora pós-moderna abrangendo loops de bateria, arranhões eletrônicos e samples
-                computadorizados. O produtor dos Dust Brothers, Michael Simpson explicou a configuração: "Fincher queria
-                abrir novos caminhos com tudo sobre o filme e uma trilha sonora não tradicional ajudou a conseguir
-                isso". O clímax e os créditos finais do filme apresentam a música "Where Is My Mind?" da banda de rock
-                alternativo Pixies.</p>
-            <br>
-
-            <a href="#clube" id="link-topo">Topo da Página</a>
-            <h2 id="lancamento">Lançamento e Recepção</h2>
-            <h3 id="marketing">Marketing</h3>
-            <p>Após a conclusão das filmagens de "Fight Club" em dezembro de 1998, o diretor David Fincher preparou o
-                filme para uma exibição com executivos da Fox, que não receberam bem o filme. Originalmente programado
-                para lançamento em julho de 1999, o filme teve sua data de lançamento adiada várias vezes, em parte
-                devido ao Massacre de Columbine. A campanha de marketing do filme enfrentou desafios, com a Fox
-                inicialmente considerando comercializá-lo como um filme de arte e resistindo à ideia de focar a promoção
-                em Brad Pitt. Apesar dos esforços de Fincher para contratar a empresa de publicidade Wieden+Kennedy e
-                criar uma campanha de marketing inovadora, a Fox optou por uma campanha mais tradicional, que muitos
-                acreditam ter contribuído para o desempenho morno do filme nas bilheterias dos Estados Unidos.</p>
-            <br>
-
-            <a href="#clube" id="link-topo">Topo da Página</a>
-            <h3 id="desempenho">Desempenho Comercial</h3>
-            <p>A 20th Century Fox realizou a estreia mundial de Fight Club no 56º Festival Internacional de Cinema de
-                Veneza em 10 de setembro de 1999. Para o lançamento nos cinemas estadunidenses, o estúdio contratou o
-                National Research Group para realizar exibições de testes; foi previsto que o filme arrecadaria entre
-                US$ 13 milhões e US$ 15 milhões no seu fim de semana de estreia. O filme estreou comercialmente nos
-                Estados Unidos e Canadá em 15 de outubro de 1999 e arrecadou US$ 11 milhões em 1.963 cinemas no seu
-                primeiro final de semana; naquela ocasião Fight Club ficou em primeiro lugar nas bilheterias, superando
-                Double Jeopardy e The Story of Us (que estreou no mesmo dia de Fight Club nos cinemas). Apesar da
-                primeira colocação do filme, sua receita bruta de abertura ficou aquém das expectativas do estúdio. No
-                seu segundo fim de semana, o filme perdeu 42,6% de sua receita, ganhando US$ 6,3 milhões. Em sua
-                exibição teatral original, o filme arrecadou US$ 37 milhões nos Estados Unidos e Canadá e US$ 63,8
-                milhões em outros territórios, totalizando US$ 100,9 milhões no mundo; após alguns relançamentos
-                subsequentes, a receita bruta mundial do filme aumentou para US$ 101,2 milhões. O fraco desempenho do
-                filme na América do Norte azedou o relacionamento entre o chefe do estúdio da 20th Century Fox, Bill
-                Mechanic, e o executivo de mídia Rupert Murdoch, o que contribuiu para a renúncia de Mechanic da Fox em
-                junho de 2000.</p>
-            <br>
-
-            <a href="#clube" id="link-topo">Topo da Página</a>
+            
             <br>
             <br>
 
@@ -196,18 +123,12 @@
         <nav class="anchors">
             <h2>Neste Artigo</h2>
             <ul>
-                <li><a href="#clube">Clube da Luta</a></li>
+                <li><a href="#topo">Rei do Show</a></li>
                 <li><a href="#trailer">Trailer</a></li>
                 <li><a href="#elenco">Elenco</a></li>
                 <li><a href="#poster">Pôster</a></li>
-                <li><a href="#producao">Produção</a></li>
-                <li><a href="#desenvolvimento">Desenvolvimento</a></li>
-                <li><a href="#escolha">Escolha do Elenco</a></li>
-                <li><a href="#filmagens">Filmagens</a></li>
                 <li><a href="#trilha">Trilha Sonora</a></li>
-                <li><a href="#lancamento">Lançamento e Recepção</a></li>
-                <li><a href="#marketing">Marketing</a></li>
-                <li><a href="#desempenho">Desempenho Comercial</a></li>
+
             </ul>
         </nav>
     </div>
